tests/spec/build/snapshots/go_nullable_comma_ok_nil_check.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"runtime/debug"
)

func main() {
	ret, ret_1 := debug.ReadBuildInfo()
	var info lisette.Option[*debug.BuildInfo]
	if ret_1 && ret != nil {
		info = lisette.MakeOptionSome[*debug.BuildInfo](ret)
	} else {
		info = lisette.MakeOptionNone[*debug.BuildInfo]()
	}
	fmt.Print(info.IsSome())
}
