tests/spec/build/snapshots/go_option_call_wrapped.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"go/doc/comment"
)

func main() {
	_, ok := comment.DefaultLookupPackage("math")
	fmt.Print(ok)
}
