tests/spec/build/snapshots/go_option_unwrap_temp_var_no_collision.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"net/http"
	"strings"
)

func main() {
	body := strings.NewReader("hello")
	ret, ret_1 := http.NewRequest("POST", "https://example.com", body)
	var req lisette.Result[*http.Request, error]
	if ret_1 != nil {
		req = lisette.MakeResultErr[*http.Request, error](ret_1)
	} else if ret == nil {
		req = lisette.MakeResultErr[*http.Request, error](errors.New("unexpected nil"))
	} else {
		req = lisette.MakeResultOk[*http.Request, error](ret)
	}
	fmt.Println(req)
}
