tests/spec/build/snapshots/go_partial_wrap_nil_guards_nilable_collection.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"io"
	"strings"
)

func main() {
	reader := strings.NewReader("hello")
	if ret, err := io.ReadAll(reader); err == nil {
		fmt.Print("ok")
	} else if ret == nil {
		fmt.Print("err")
	} else {
		fmt.Print("both")
	}
}
