tests/spec/build/snapshots/go_partial_wrap_nil_guards_nilable_ok.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"go/parser"
)

func main() {
	if ret, err := parser.ParseExpr("1 + 2"); err == nil {
		fmt.Print("ok")
	} else if lisette.IsNilInterface(ret) {
		fmt.Print("err")
	} else {
		fmt.Print("both")
	}
}
