tests/spec/build/snapshots/go_promoted_value_receiver_satisfies_interface_by_value.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"sort"
)

type Ranking struct {
	sort.IntSlice
}

func sortIt(i sort.Interface) {
	sort.Sort(i)
}

func main() {
	r := Ranking{IntSlice: sort.IntSlice([]int{3, 1, 2})}
	sortIt(r)
	fmt.Println(r.IntSlice)
}
