tests/spec/build/snapshots/go_result_ref_nil_guard.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func main() {
	ret, ret_1 := os.Open("/tmp/test.txt")
	var result lisette.Result[*os.File, error]
	if ret_1 != nil {
		result = lisette.MakeResultErr[*os.File, error](ret_1)
	} else if ret == nil {
		result = lisette.MakeResultErr[*os.File, error](errors.New("unexpected nil"))
	} else {
		result = lisette.MakeResultOk[*os.File, error](ret)
	}
	fmt.Print(result.IsOk())
}
