tests/spec/build/snapshots/go_single_pointer_option_wrapped.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"flag"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	raw := flag.Lookup("verbose")
	result := lisette.OptionFromNilable[*flag.Flag](raw, raw == nil)
	fmt.Print(result.IsSome())
}
