tests/spec/build/snapshots/go_struct_field_assignment_unwrap.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"runtime/debug"
)

func main() {
	replacement := debug.Module{
		Path:    "example.com/replacement",
		Version: "v2.0.0",
		Sum:     "",
		Replace: nil,
	}
	mod_ := debug.Module{
		Path:    "example.com/mod",
		Version: "v1.0.0",
		Sum:     "",
		Replace: nil,
	}
	mod_.Replace = &replacement
	fmt.Print(mod_.Path)
}
