tests/spec/build/snapshots/go_struct_literal_none_unwrap.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"runtime/debug"
)

func main() {
	mod_ := debug.Module{
		Path:    "example.com/mod",
		Version: "v1.0.0",
		Sum:     "",
		Replace: nil,
	}
	fmt.Print(mod_.Path)
}
