tests/spec/build/snapshots/go_struct_nullable_field_raw_temp_var_no_collision.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"runtime/debug"
)

func main() {
	mod_ := debug.Module{
		Path:    "example.com/mod",
		Version: "v1.0.0",
		Sum:     "",
		Replace: nil,
	}
	raw := mod_.Replace
	r := lisette.OptionFromNilable[*debug.Module](raw, raw == nil)
	raw_1 := 3
	fmt.Println(r)
	fmt.Println(raw_1)
}
